RoxeePlayer-0.6.0:
    Fix broken filepath fed to mediaPath preventing to play.
    Fix modules list.
    Fix mouse tracking.
    Build cleanup.

RoxeePlayer-0.5.0:
    Clean-up build system
    Linux building

RoxeePlayer-0.3.1:
    Work in progress

RoxeePlayer-0.3.0-20120607 "I'm gonna kill you in every world":
    First public release