@@ -1,3 +1,8 @@
+RoxeePlayer-0.7.0-dev:
+    Third-party manager to automatically download VLC on OSX.
+    Working demo.
+    Updated README/documentation.
+
 RoxeePlayer-0.6.0:
     Fix broken filepath fed to mediaPath preventing to play.
     Fix modules list.
